--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "tailwindcss": "^4.1.10"
+  },
+  "engines": { 
+    "node": "22"
   }
 }
